--- a/stylePersonal.css
+++ b/stylePersonal.css
@@ -9,6 +9,7 @@
 /*Diseño body*/
 
 body{
+    position: fixed;
     background-color: #F5DF99;
 }
 
@@ -17,6 +18,7 @@ body{
 header{
     height: 120px;
     display: flex;
+    width: 100%;
     background-color: #F6FBF4 ;
     color: green;
     font-size: large;
@@ -32,6 +34,24 @@ header{
     margin-right: 10px;
 }
 
+/*Diseño main*/
+
+main{
+    width: 100%;
+    height: 120px;
+    color: green;
+}
+
+.textoInformacion p{
+    padding-top: 35px;
+    padding-left: 25px;
+    padding-right: 25px;
+    font-size: x-large;
+    
+    text-align:justify;
+}
+
+
 /*Diseño Footer*/
 
 footer{
@@ -44,7 +64,7 @@ footer{
 }
 
 .tituloFooter{
-    padding-top: 25px;
+    padding-top: 15px;
     padding-bottom: 8px;
     padding-left: 20px;
     
@@ -59,11 +79,19 @@ footer{
 }
 
 .apartados{
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
     text-align: center;
     font-weight: bold;
 }
 
+.barraImagen{
+    background-color:black ;
+}
 
+.barraImagen img{
+    display: block;
+    margin-right: auto;
+    opacity: 0.6;
+}
 
