--- a/stylePersonal.css
+++ b/stylePersonal.css
@@ -9,6 +9,7 @@
 /*Diseño body*/
 
 body{
+    width: 100%;
     position: fixed;
     background-color: #F5DF99;
 }
@@ -38,7 +39,6 @@ header{
 
 main{
     width: 100%;
-    height: 120px;
     color: green;
 }
 
@@ -47,7 +47,6 @@ main{
     padding-left: 25px;
     padding-right: 25px;
     font-size: x-large;
-    
     text-align:justify;
 }
 
