--- a/stylePersonal.css
+++ b/stylePersonal.css
@@ -2,7 +2,7 @@
 
 *{
     margin: 0;
-    padding: 0px;
+    padding: 0;
     box-sizing: border-box;
 }
 
@@ -10,7 +10,6 @@
 
 body{
     width: 100%;
-    position: fixed;
     background-color: #F5DF99;
 }
 
@@ -55,7 +54,7 @@ main{
 
 footer{
     color: white;
-    position: fixed;
+    position:fixed;
     bottom: 0px;
     width: 100%;
     background: #4B8673;
