--- a/Catalogo.css
+++ b/Catalogo.css
@@ -140,6 +140,11 @@ footer{
     font-weight: bold;
 }
 
+.apartados a{
+    text-decoration: none;
+    color: white;
+}
+
 .barraImagen{
     background-color:black ;
 }
