--- a/Contacto.css
+++ b/Contacto.css
@@ -122,6 +122,11 @@ footer{
     font-weight: bold;
 }
 
+.apartados a{
+    text-decoration: none;
+    color: white;
+}
+
 .barraImagen{
     background-color:black ;
 }
