--- a/indexStyle.css
+++ b/indexStyle.css
@@ -91,6 +91,11 @@ footer{
     font-weight: bold;
 }
 
+.apartados a{
+    text-decoration: none;
+    color: white;
+}
+
 .barraImagen{
     background-color:black ;
 }
